add: back button to verify email & email verified page

--- a/src/main/resources/templates/accountVerified.html
+++ b/src/main/resources/templates/accountVerified.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 	<h3>Your account is active and your email address is verified!</h3>
+	<a href="/">Start Page</a> 
 </body>
 </html>
