--- a/src/main/resources/templates/verifyEmailAddress.html
+++ b/src/main/resources/templates/verifyEmailAddress.html
@@ -5,7 +5,7 @@
 <title>SpringLoginRegistration</title>
 </head>
 <body>
-	<h3
-		th:text="'A verification email has been sent to: ' + ${emailAddress}"></h3>
+	<h3 th:text="'A verification email has been sent to: ' + ${emailAddress}"></h3>
+	<a href="/">Start Page</a> 
 </body>
 </html>
